--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,4 +1,4 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{struct_memory_struct}{Memory\+Struct} }{\pageref{d4/d01/struct_memory_struct}}{}
+\item\contentsline{section}{\hyperlink{struct_memory_struct}{Memory\+Struct} \\*Contain downloaded data }{\pageref{d4/d01/struct_memory_struct}}{}
 \end{DoxyCompactList}
