--- a/docs/latex/d0/d29/main_8c.tex
+++ b/docs/latex/d0/d29/main_8c.tex
@@ -14,9 +14,8 @@ Parser processing and output result O\+R get input to process.
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{main_8c_a0ddf1224851353fc92bfbff6f499fa97}{int {\bfseries main} (int argc, char $\ast$argv\mbox{[}$\,$\mbox{]})}\label{main_8c_a0ddf1224851353fc92bfbff6f499fa97}
-
-\end{DoxyCompactItemize}
+int \hyperlink{main_8c_a0ddf1224851353fc92bfbff6f499fa97}{main} (int argc, char $\ast$argv\mbox{[}$\,$\mbox{]})
+\begin{DoxyCompactList}\small\item\em Get input to process parsing. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Variables}
 \begin{DoxyCompactItemize}
 \item 
@@ -41,3 +40,27 @@ T\+A\+H\+R\+I Ahmed, S\+I\+M\+O\+N Jérémy
 8th november 2014
 \end{DoxyDate}
 Handle request and process them in order to send the result to stdout 
+
+\subsection{Function Documentation}
+\hypertarget{main_8c_a0ddf1224851353fc92bfbff6f499fa97}{\index{main.\+c@{main.\+c}!main@{main}}
+\index{main@{main}!main.\+c@{main.\+c}}
+\subsubsection[{main}]{\setlength{\rightskip}{0pt plus 5cm}int main (
+\begin{DoxyParamCaption}
+\item[{int}]{argc, }
+\item[{char $\ast$}]{argv\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}}\label{main_8c_a0ddf1224851353fc92bfbff6f499fa97}
+
+
+Get input to process parsing. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em argc} & Number of arguments \\
+\hline
+{\em argv} & String args \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+0 -\/ Program went fine; -\/1 Something wrong 
+\end{DoxyReturn}
